@@ -1,3 +1,8 @@
+2002-06-22  Seth Robertson  <seth@yeah.baka.org>
+
+	* lib/b_addrgroup.c (tcp_connect_start): Allow zero timeout to
+	mean no timeout, not immediate timeout.
+
 2002-06-21  Seth Robertson  <seth@startide.sysdetect.com>
 
 	* lib/b_run.c (bk_run_run): Reset run_over flag during entry
